--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -76,13 +76,17 @@ header.primary nav ul{
 
 header.primary nav li{
   margin-bottom: 10px;
-
+ text-decoration: none;
 }
 
 header.primary nav li a{
+
+  
   border: 2px solid #284A7D;
   border-right:10px solid#284A7D;
   border-radius: 20px 0;
+  color: #000;
+
 
   background-color:rgba(231, 234, 238, 0.9);
   color:#000;
