--- a/state-park/assets/css/style.css
+++ b/state-park/assets/css/style.css
@@ -1,5 +1,7 @@
 img{max-width: 100%;}
-
+p{
+    text-indent: 4ch;
+}
 
 body{
     
@@ -22,15 +24,13 @@ font-size: 1rem;
 header.primary{
     font-family: "Noto Sans", sans-serif;
 font-weight: 300;
-font-family: "Libre Baskerville", serif;
-  font-weight: 400;
 
 
     position:fixed ;
     top: 0;
     width: 100%;
     height: 20vh;
-    background-color: rgb(241, 241, 0);
+    background-color: rgb(244, 221, 16);
     margin: 0px;
     
    
@@ -69,32 +69,44 @@ header #logo{
 }
 header img{
    
-    max-height:18vh ;
+    height:18vh ;
     
     border: none;
-
-    
-    margin: auto;
+    object-fit: contain;
+    margin-top: .05vh;
+   
     
    
 }
 header h1{
     
 
-    grid-column:3/9 ;
+    grid-column:2/7 ;
     grid-row:1/2 ;
 
 
-    margin: auto;
-    font-size: 3rem;
+    margin-right: auto;
+    margin-top: auto;
+    margin-bottom: auto;
+    font-size: 3.2rem;
+    font-weight: 800;
+    
+}
+header div #banner{
+    grid-row:1/2 ;
+    grid-column: 9/11 ;
+    
+    background-image:url('/state-park/assets/img/bench-view.jpg');
+
+
 }
 header nav{
 
  
-    grid-column:9/13 ;
-   
+    grid-column:11/13 ;
+    grid-row:1/2 ;
 
-    height: 100%;
+    height: 20vh;
 }
 header nav ul{
     margin: 0px;
@@ -103,6 +115,8 @@ header nav ul{
 header.primary nav li{
     list-style-type: none;
     height: 33.3%;
+
+    
     
     
 }
@@ -110,15 +124,16 @@ header.primary nav li{
 header.primary nav li a{
     
     border-left:3px solid rgb(236, 235, 230);
-    border-radius: 5px;
+    
   height: 100%;
-    background-color:rgb(241, 241, 0);
+    
     
     
     display:block;
     text-align:center;
     text-decoration: none;
-    font-size: 1.4rem;
+    font-size: 1.2rem;
+    
     transition: .3s;
   }
 
@@ -127,9 +142,9 @@ color: black;
   }
   header.primary nav a:hover{
   
-    background-color:rgb(223, 187, 4);
-    text-decoration: underline;
-    color:#ffffff;
+    background-color:rgba(255, 253, 240, 0.25);
+    
+    
   }
 
 
@@ -148,14 +163,14 @@ h2{
 div#ATP{
     padding-top: 35px;
     margin: 0px;
-font-family: "Libre Baskerville", serif;
-  font-weight: 400;
+    font-family: "Noto Sans", sans-serif;
+    font-weight: 300;
     font-size: 1.7rem;
 }
 
 section#gridM .container{
-    font-family: "Libre Baskerville", serif;
-    font-weight: 400;
+    font-family: "Noto Sans", sans-serif;
+    font-weight: 300;
     display: grid;
     grid-template-columns: repeat(12,1fr);
     
