--- a/state-park/assets/css/style.css
+++ b/state-park/assets/css/style.css
@@ -92,14 +92,7 @@ header h1{
     font-weight: 800;
     
 }
-header div #banner{
-    grid-row:1/2 ;
-    grid-column: 9/11 ;
-    
-    background-image:url('/state-park/assets/img/bench-view.jpg');
 
-
-}
 header nav{
 
  
@@ -131,10 +124,12 @@ header.primary nav li a{
     
     display:block;
     text-align:center;
+   
     text-decoration: none;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
+    font-weight: 600;
     
-    transition: .3s;
+    transition: .25s;
   }
 
   header.primary nav li :visited{
@@ -142,7 +137,7 @@ color: black;
   }
   header.primary nav a:hover{
   
-    background-color:rgba(255, 253, 240, 0.25);
+    text-decoration: underline;
     
     
   }
@@ -157,11 +152,14 @@ section.content{
 }
 
 h2{
+    padding-top: 35px;
     margin: 0px;
     
 }
+
+
 div#ATP{
-    padding-top: 35px;
+   
     margin: 0px;
     font-family: "Noto Sans", sans-serif;
     font-weight: 300;
@@ -184,11 +182,11 @@ section#gridM #mainpara1{
 }
 
 section#gridM #article1{
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(248, 248, 248);
     padding: 7px;
 
-    border: 2px solid #ffffff;
-    border-left: 13px solid #ffffff;
+    border: 2px solid rgb(248, 248, 248);
+    border-left: 13px solid rgb(248, 248, 248)f;
   
   border-radius: 4px ;
 
@@ -211,7 +209,7 @@ section#gridM #article1 #mainimg1{
 }
 section#gridM #article1 #mainpara2{
     padding-right: 12%;
-    border-right:10px solid rgb(241, 241, 0);
+    border-right:10px solid rgb(255, 214, 48);
     
     width: 45%;
    
@@ -256,7 +254,98 @@ section#gridM #mainpara4{
 
 
 
+
+
+div#p2flex{
+    
+    background-color: rgba(28, 85, 135, 0);
+    
+}
+h2#ATP2
+{
+    padding-bottom: 16px;
+    
+}
+article#page2{
+    font-size: 1rem;
+    padding: 20px;
+    padding-top: 1px;
+    background-color: rgb(248, 248, 248);
+    width:20hw ;
+    height: 370px;
+    margin-bottom: 50px;
+
+    
+    
+}
+article h3{
+    font-size: 1.5rem;
+}
+
+article#page2 img{
+   max-height: 300px;
+   float: left;
+   padding-right: 30px;
+}
+
+article#page2 a{
+    background-color: rgb(255, 214, 48);
+    border:3px solid rgb(255, 214, 48);
+    border-radius: 10px;
+  
+    bottom: 0;
+    float: right;
+    display:block;
+    text-align:center;
+   
+    text-decoration: none;
+    display: flex;
+    justify-content: flex-end;
+    transition: .25s;
+    color: black;
+ }
+
+
+  article#page2 a :visited{
+color: black;
+  }
+  article#page2 a:hover{
+  
+    text-decoration: underline;
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 footer{
 
-    background-color: yellow;
+    background-color: rgb(244, 221, 16);
 }
