--- a/state-park/assets/css/style.css
+++ b/state-park/assets/css/style.css
@@ -303,6 +303,8 @@ article#page2 a{
     justify-content: flex-end;
     transition: .25s;
     color: black;
+
+    padding: 2px 10px;
  }
 
 
@@ -310,24 +312,10 @@ article#page2 a{
 color: black;
   }
   article#page2 a:hover{
-  
-    text-decoration: underline;
+    background-color: rgb(252, 197, 78);
+    border:3px solid rgb(252, 197, 78);
+   
   }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -346,6 +334,32 @@ color: black;
 
 
 footer{
-
+    display:flex;
     background-color: rgb(244, 221, 16);
+    justify-content: space-between;
+    padding: 7px;
+
+    padding-top :10px;
+    padding-bottom :4px;
+}
+footer a{
+    
+   
+    border-radius: 10px;
+  
+    display:block;
+    text-align:center;
+   
+    text-decoration: none;
+    color: black;
+}
+
+footer a :visited{
+  
+    color: black;
+}
+
+footer a:hover{
+  
+    text-decoration: underline;
 }
